Fix hero section mobile styling

--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -1,35 +1,37 @@
 @use '../util' as *;
 
 .hero {
-    height: calc(100vh - 40px);
-    margin: rem(20) 5% 0;
+    height: calc(100vh - 60px);
+    margin-top: rem(60);
+    padding: 5% 5% 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     @include breakpoint-up(medium) {
         height: 100%;
-        margin-bottom: 8%;
+        margin: rem(70) 0 8%;
+        padding: 5% 10% 0;
     }
 
     @include breakpoint-up(large) {
         max-width: rem(1004);
-        margin: 0 auto 8%;
-        padding: 15vh 0 0;
+        margin: rem(80) auto 8%;
+        padding: 5vh 0;
         flex-direction: row;
-        align-items: start;
         gap: rem(100);
     }
 
     &__info {
         height: 100%;
-        padding-top: 5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+        padding-top: 10%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 75% 25%;
 
         @include breakpoint-up(medium) {
-            padding-top: 0;
+            padding-top: 5%;
+            grid-template-rows: rem(205) rem(60);
         }
         @include breakpoint-up(large) {
             margin: auto;
@@ -78,28 +80,28 @@
                 }
             }
 
+            @include breakpoint-up(large) {
+                align-self: end;
+            }
         }
     }
+
     &__image {
-        max-width: 350px;
-        height: 100%;
-        margin: rem(50) 0 rem(20);
-        border-radius: 50%;
-        flex: 1 1 75%;
-        overflow: hidden;
+        max-width: rem(350);
+        max-height: rem(350);
+        flex: 1 1 80%;
         order: -1;
         opacity: 0.9;
-        z-index: -1;
+        aspect-ratio: 1/1;
 
         @include breakpoint-up(large) {
-            margin: 0;
             flex: 1 1 50%;
             order: 0;
         }
 
         img {
-            width: 100%;
             height: 100%;
+            width: 100%;
         }
     }
 }
